--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "post-service",
-  "version": "1.0.0",
-  "description": "Post Function service Account: post-fuction@project-416223.iam.gserviceaccount.com",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "firebase-admin": "^12.0.0",
-    "uuid": "^9.0.1"
-  }
+	"name": "post-service",
+	"version": "1.0.0",
+	"description": "Post Function service Account: post-fuction@project-416223.iam.gserviceaccount.com",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node --watch server.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.18.3",
+		"firebase-admin": "^12.0.0",
+		"uuid": "^9.0.1"
+	}
 }
